# jd-rs

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml
.github/workflows/: ci.yml
ADRs/: 0001-clarify-test-flag.md  0002-adopt-arbitrary-for-fuzzing.md  0003-clarify-color-handling.md
crates/jd-benches/: Cargo.toml  README.md
crates/jd-benches/baselines/: criterion-ci.json
crates/jd-benches/benches/: smoke.rs
crates/jd-benches/fixtures/github/: after.json  before.json
crates/jd-benches/fixtures/kubernetes/: after.json  before.json
crates/jd-benches/fixtures/large-array/: after.json  before.json
crates/jd-benches/src/: lib.rs
crates/jd-benches/tests/: readme_examples.rs
crates/jd-cli/: Cargo.toml  README.md
crates/jd-cli/src/: main.rs
crates/jd-cli/tests/: cli_smoke.rs
crates/jd-core/: Cargo.toml  README.md
crates/jd-core/src/: error.rs  hash.rs  lib.rs  node.rs  number.rs  options.rs  patch.rs
crates/jd-core/src/diff/: list.rs  mod.rs  object.rs  path.rs  primitives.rs
crates/jd-core/tests/: diff_golden.rs  patch.rs  readme_examples.rs  render.proptest-regressions  render.rs  render_golden.rs
crates/jd-core/tests/fixtures/diff/list/: append.json  duplicate_alignment.json  nested_object.json  removal.json  substitution.json
crates/jd-core/tests/fixtures/render/: list_append.json  merge_object.json  object_update.json  string_diff_color.json
crates/jd-fuzz/: Cargo.toml  README.md
crates/jd-fuzz/src/: lib.rs
crates/jd-fuzz/tests/: readme_examples.rs
docs/: architecture.md  benchmarks.md  code-doc-sync-report.md  final-report.md  implementation_plan.md  status.md
docs/parity/upstream/jd-v2.2.2/: README.md  VERSION.txt
docs/parity/upstream/jd-v2.2.2/arrays-multiset/: after.json  before.json  command.txt  diff.jd
docs/parity/upstream/jd-v2.2.2/arrays-multiset-nested/: after.json  before.json  command.txt  diff.jd
docs/parity/upstream/jd-v2.2.2/arrays-set/: after.json  before.json  command.txt  diff.jd
docs/parity/upstream/jd-v2.2.2/arrays-setkeys/: after.json  before.json  command.txt  diff.jd
docs/parity/upstream/jd-v2.2.2/arrays-setkeys-nested/: after.json  before.json  command.txt  diff.jd
docs/parity/upstream/jd-v2.2.2/color-output/: after.json  before.json  command.txt  diff.color
docs/parity/upstream/jd-v2.2.2/default-nested-structures/: after.json  before.json  command.txt  diff.jd
docs/parity/upstream/jd-v2.2.2/default-object/: after.json  command.txt
docs/parity/upstream/jd-v2.2.2/format-merge/: after.json  before.json  command.txt  diff.merge.json
docs/parity/upstream/jd-v2.2.2/format-patch/: after.json  before.json  command.txt
docs/parity/upstream/jd-v2.2.2/opts-multiset/: after.json  before.json  command.txt  diff.jd
docs/parity/upstream/jd-v2.2.2/opts-precision/: after.json  before.json  command.txt
docs/parity/upstream/jd-v2.2.2/opts-set/: after.json  command.txt
docs/parity/upstream/jd-v2.2.2/opts-setkeys/: after.json  command.txt  diff.jd
docs/parity/upstream/jd-v2.2.2/output-flag-dash-filename/: -  after.json  before.json  command.txt
docs/parity/upstream/jd-v2.2.2/output-flag-format-merge/: after.json  before.json  command.txt  diff.merge
docs/parity/upstream/jd-v2.2.2/output-flag-format-patch/: after.json  before.json  command.txt  diff.patch
docs/parity/upstream/jd-v2.2.2/output-flag-patch-mode/: command.txt  original.json  patch.jd  patched.json  target.json
docs/release-notes/: v0.1.0.md
docs/specs/: diff-engine-mvp.md  patch-renderers.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: canonicalize.rs  diff.rs  patch_apply.rs
nix/: flake.nix
scripts/: bench_vs_go.sh  check_bench_regressions.py  gen_list_diff_fixtures.go  gen_render_fixtures.go  go.mod  go.sum  run_parity.sh
tests/: readme_examples.rs
(+35 files in other folders)
