[workspace]
members = []
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Kamil Czerwiński <kamil@czerwinski.dev>"]
repository = "https://github.com/kamilczerw/jd-rs"
rust-version = "1.88"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
  "ansi",
  "env-filter",
  "fmt",
  "json",
] }

[workspace.lints.clippy]
all = "deny"
pedantic = "allow"
nursery = "allow"

[workspace.metadata.cargo-deny]
# see deny.toml
