[package]
name = "jd-fuzz-targets"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
libfuzzer-sys = "0.4"
jd-fuzz = { path = "../crates/jd-fuzz" }
arbitrary = "1.3"

[[bin]]
name = "canonicalize"
path = "fuzz_targets/canonicalize.rs"

[[bin]]
name = "diff"
path = "fuzz_targets/diff.rs"

[[bin]]
name = "patch_apply"
path = "fuzz_targets/patch_apply.rs"
