[package]
name = "jd-core"
version = "0.0.0"
edition = "2021"
authors = ["Kamil Czerwiński <kamil@czerwinski.dev>"]
description = "Core library for the Rust port of jd"
license = "MIT"
publish = false

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
proptest = { workspace = true }
