[package]
name = "jd-fuzz"
version = "0.0.0"
edition = "2021"
authors = ["Kamil Czerwiński <kamil@czerwinski.dev>"]
description = "Fuzzing harnesses for the Rust port of jd"
license = "MIT"
publish = false

[dependencies]
jd-core = { path = "../jd-core" }
anyhow = { workspace = true }

[dev-dependencies]
